# flutter_mpv

./: README.md  melos.yaml  pubspec.yaml
examples/: COMPLETE.md  INTEGRATION_SUMMARY.md  README.md
flutter_mpv/: CHANGELOG.md  README.md  pubspec.yaml
flutter_mpv/example/: README.md
flutter_mpv/lib/: flutter_mpv.dart
flutter_mpv/lib/ffi/: README.txt
flutter_mpv/lib/src/: flutter_mpv.dart  values.dart
flutter_mpv/test/common/: sources_native.dart
flutter_mpv_test/: pubspec.yaml  pubspec_overrides.yaml
flutter_mpv_test/android/app/: build.gradle
flutter_mpv_test/ios/Runner/: Info-Debug.plist  Info-Release.plist
flutter_mpv_test/ios/Runner.xcodeproj/: project.pbxproj
flutter_mpv_test/lib/: main.dart
flutter_mpv_test/lib/common/: globals.dart  widgets.dart
flutter_mpv_test/lib/tests/: 01.single_player_single_video.dart  02.single_player_multiple_video.dart  03.multiple_player_multiple_video.dart  04.tabs_test.dart  05.stress_test.dart  06.paint_first_frame.dart  07.video_controller_set_size.dart  08.screenshot.dart  09.seamless.dart  10.programmatic_fullscreen.dart  11.video_view_parameters.dart
flutter_mpv_test/linux/: CMakeLists.txt  my_application.cc
flutter_mpv_test/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_mpv_test/web/: index.html  manifest.json
flutter_mpv_test/windows/: CMakeLists.txt
flutter_mpv_test/windows/runner/: Runner.rc  (+1 more)
flutter_mpv_video/: CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
flutter_mpv_video/android/: build.gradle  settings.gradle
flutter_mpv_video/example/: pubspec.yaml  pubspec_overrides.yaml
flutter_mpv_video/ios/: flutter_mpv_video.podspec
flutter_mpv_video/lib/: flutter_mpv_video.dart
flutter_mpv_video/linux/: CMakeLists.txt  media_kit_video_plugin.cc  texture_gl.cc  texture_sw.cc  utils.cc  video_output.cc  video_output_manager.cc
flutter_mpv_video/macos/: flutter_mpv_video.podspec
flutter_mpv_video/windows/: CMakeLists.txt  angle_surface_manager.cc  angle_surface_manager.h  media_kit_video_plugin.cc  media_kit_video_plugin.h  media_kit_video_plugin_c_api.cc  thread_pool.h  utils.cc  utils.h  video_output.cc  video_output.h  video_output_manager.cc  video_output_manager.h
flutter_mpv_video/windows/include/flutter_mpv_video/: media_kit_video_plugin_c_api.h
media_kit/: pubspec.yaml
media_kit/lib/: flutter_mpv.dart  media_kit.dart
video_player_flutter_mpv/: pubspec.yaml
video_player_flutter_mpv/example/: pubspec.yaml  pubspec_overrides.yaml
video_player_flutter_mpv/lib/: video_player_media_kit.dart
video_player_media_kit/: pubspec_overrides.yaml
(+198 files in other folders)
